# Proyecto-Final

./: PROYECTO_ML.pptx  pyproject.toml
Código/: 1. Carga y análisis.ipynb  2. KMedoids, PCA y ML Model.ipynb
Doc/: Readme.MD
Modelos/: GB_Model
